--- a/dev/com.ibm.ws.threading/build.gradle
+++ b/dev/com.ibm.ws.threading/build.gradle
@@ -10,6 +10,15 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+tasks.withType(JavaCompile) {
+    options.release = 19
+    options.compilerArgs.add('--enable-preview')
+}
+
 test {
     jvmArgs '-Dcom.ibm.ws.ras.trace.specification=com.ibm.ws.threading.*=event=enabled'
+    dependsOn ':cnf:copyMavenLibs'
+    doFirst {
+        jvmArgs = ['--enable-preview']
+    }
 }
