changing to virtual threads scenario11

--- a/dev/io.openliberty.org.jboss.resteasy.common/build.gradle
+++ b/dev/io.openliberty.org.jboss.resteasy.common/build.gradle
@@ -42,3 +42,14 @@ task extractInjectedClasses(type: Copy) {
 
 compileJava.dependsOn extractInjectedClasses
 
+tasks.withType(JavaCompile) {
+  options.release = 19
+  options.compilerArgs.add('--enable-preview')
+}
+
+test {
+  dependsOn ':cnf:copyMavenLibs'
+  doFirst {
+    jvmArgs = ['--enable-preview']
+  }
+}
