changing to virtual threads scenario5

--- a/dev/com.ibm.ws.threading/build.gradle
+++ b/dev/com.ibm.ws.threading/build.gradle
@@ -4,12 +4,21 @@
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+tasks.withType(JavaCompile) {
+    options.release = 19
+    options.compilerArgs.add('--enable-preview')
+}
+
 test {
     jvmArgs '-Dcom.ibm.ws.ras.trace.specification=com.ibm.ws.threading.*=event=enabled'
+    dependsOn ':cnf:copyMavenLibs'
+    doFirst {
+        jvmArgs = ['--enable-preview']
+    }
 }
