Fixed build errors and reverted some applied transformations to fix build errors

--- a/dev/com.ibm.ws.logging.hpel/build.gradle
+++ b/dev/com.ibm.ws.logging.hpel/build.gradle
@@ -12,7 +12,15 @@
  *******************************************************************************/
 
 test {
+  dependsOn ':cnf:copyMavenLibs'
+  doFirst {
+    jvmArgs = ['--enable-preview']
+  }
   dependsOn ':com.ibm.ws.logging.hpel.binarylogviewer:publishToolJars'
   dependsOn ':com.ibm.ws.kernel.cmdline:publishWLPJars'
   dependsOn publishWLPJars
+}
+tasks.withType(JavaCompile) {
+  options.release = 19
+  options.compilerArgs.add('--enable-preview')
 }
