--- a/dev/com.ibm.ws.logging/build.gradle
+++ b/dev/com.ibm.ws.logging/build.gradle
@@ -10,7 +10,16 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
-
+test {
+    dependsOn ':cnf:copyMavenLibs'
+    doFirst {
+        jvmArgs = ['--enable-preview']
+    }
+}
+tasks.withType(JavaCompile) {
+    options.release = 19
+    options.compilerArgs.add('--enable-preview')
+}
 compileTestJava {
     inputs.files { rasInstrumentationInputFiles() }
     doLast {
