--- a/dev/com.ibm.ws.microprofile.faulttolerance.2.0/build.gradle
+++ b/dev/com.ibm.ws.microprofile.faulttolerance.2.0/build.gradle
@@ -12,5 +12,13 @@
  *******************************************************************************/
 
 test {
+    dependsOn ':cnf:copyMavenLibs'
+    doFirst {
+        jvmArgs = ['--enable-preview']
+    }
     systemProperty "com.ibm.ws.microprofile.faulttolerance.jse", "true"
+}
+tasks.withType(JavaCompile) {
+    options.release = 19
+    options.compilerArgs.add('--enable-preview')
 }
