--- a/dev/com.ibm.ws.threading/build.gradle
+++ b/dev/com.ibm.ws.threading/build.gradle
@@ -11,5 +11,13 @@
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
 test {
+    dependsOn ':cnf:copyMavenLibs'
+    doFirst {
+        jvmArgs = ['--enable-preview']
+    }
     jvmArgs '-Dcom.ibm.ws.ras.trace.specification=com.ibm.ws.threading.*=event=enabled'
+}
+tasks.withType(JavaCompile) {
+    options.release = 19
+    options.compilerArgs.add('--enable-preview')
 }
