Fixed build errors
(cherry picked from commit 57fb1dd40b3e7f54d80b9364cc43bc6be18e1e69)

--- a/dev/com.ibm.ws.install/build.gradle
+++ b/dev/com.ibm.ws.install/build.gradle
@@ -45,5 +45,13 @@ jar.dependsOn(massiveCopyTask)
 
 test {
     dependsOn jar
+    dependsOn ':cnf:copyMavenLibs'
+    doFirst {
+        jvmArgs = ['--enable-preview']
+    }
     jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+}
+tasks.withType(JavaCompile) {
+    options.release = 19
+    options.compilerArgs.add('--enable-preview')
 }
