--- a/dev/com.ibm.ws.config/build.gradle
+++ b/dev/com.ibm.ws.config/build.gradle
@@ -9,5 +9,13 @@
  *******************************************************************************/
 
 test {
+    dependsOn ':cnf:copyMavenLibs'
+    doFirst {
+        jvmArgs = ['--enable-preview']
+    }
    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+}
+tasks.withType(JavaCompile) {
+    options.release = 19
+    options.compilerArgs.add('--enable-preview')
 }
