--- a/dev/com.ibm.ws.webcontainer/build.gradle
+++ b/dev/com.ibm.ws.webcontainer/build.gradle
@@ -11,6 +11,11 @@
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
 
+tasks.withType(JavaCompile) {
+    options.release = 19
+    options.compilerArgs.add('--enable-preview')
+}
+
 compileJava {
     inputs.files { rasInstrumentationInputFiles() }
     doLast {
@@ -32,6 +37,10 @@ compileJava {
 }
 
 test {
+    dependsOn ':cnf:copyMavenLibs'
+    doFirst {
+        jvmArgs = ['--enable-preview']
+    }
    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED",
               "--add-opens", "java.base/java.io=ALL-UNNAMED"]
 }
